build_log_3.txt
   Compiling glass-widget v0.1.0 (/home/moebius/Desktop/Dev/glass-widget)
warning: unused import: `TerminalExt`
 --> src/terminal.rs:2:22
  |
2 | use vte4::{Terminal, TerminalExt, TerminalExtManual, PtyFlags};
  |                      ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `std::path::Path`
 --> src/terminal.rs:4:5
  |
4 | use std::path::Path;
  |     ^^^^^^^^^^^^^^^

error[E0283]: type annotations needed
  --> src/terminal.rs:20:9
   |
12 |     terminal.spawn_async(
   |              ----------- required by a bound introduced by this call
...
20 |         None, // cancellable
   |         ^^^^ cannot infer type of the type parameter `T` declared on the enum `Option`
   |
   = note: cannot satisfy `_: IsA<Cancellable>`
   = help: the following types implement trait `IsA<T>`:
             `ATContext` implements `IsA<ATContext>`
             `ATContext` implements `IsA<gtk4::glib::Object>`
             `AboutDialog` implements `IsA<AboutDialog>`
             `AboutDialog` implements `IsA<Accessible>`
             `AboutDialog` implements `IsA<Buildable>`
             `AboutDialog` implements `IsA<ConstraintTarget>`
             `AboutDialog` implements `IsA<Native>`
             `AboutDialog` implements `IsA<Root>`
           and 1820 others
note: required by a bound in `vte4::TerminalExtManual::spawn_async`
  --> /home/moebius/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/vte4-0.9.0/src/terminal.rs:51:35
   |
42 |     fn spawn_async<P: FnOnce(Result<glib::Pid, glib::Error>) + 'static, Q: Fn() + 'static>(
   |        ----------- required by a bound in this associated function
...
51 |         cancellable: Option<&impl IsA<gio::Cancellable>>,
   |                                   ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `TerminalExtManual::spawn_async`
help: consider specifying the generic argument
   |
20 |         None::<&_>, // cancellable
   |             ++++++

warning: unused import: `gtk4::prelude`
 --> src/terminal.rs:1:5
  |
1 | use gtk4::prelude::*;
  |     ^^^^^^^^^^^^^

warning: variable does not need to be mutable
  --> src/monitor.rs:12:13
   |
12 |         let mut networks = Networks::new_with_refreshed_list();
   |             ----^^^^^^^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

For more information about this error, try `rustc --explain E0283`.
warning: `glass-widget` (bin "glass-widget") generated 4 warnings
error: could not compile `glass-widget` (bin "glass-widget") due to 1 previous error; 4 warnings emitted
